<resources>
    <string name="app_name">Lat02Ads</string>
    <string name="get_started">Get Started</string>
    <string name="hello">Hello</string>
    <string name="sudah_menabungkan_hari_ini">Sudah Menabungkah Hari ini?</string>
    <string name="understand">Understand</string>
    <string name="goal">Goal</string>
    <string name="sign_in">Sign in</string>
    <string name="signin_continue">Signin continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="my_financial">My Financial</string>
    <string name="blog">Blog</string>
    <string name="user">User</string>
</resources>
