<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        style="@style/Textview.High.Red"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/my_financial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_zerki" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_rectangle_white_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView11"
            style="@style/Textview.High.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello, Zerky Y" />

        <TextView
            android:id="@+id/textView12"
            style="@style/Textview.Normal.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="We can help you" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_blog"
                    style="@style/Textview.Normal.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_white_top_left_background"
                    android:drawableTop="@drawable/ic_blogging"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingStart="-40dp"
                    android:paddingTop="45dp"
                    android:paddingBottom="18dp"
                    android:text="@string/blog" />

                <TextView
                    style="@style/Textview.Normal.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_rectangle_white_left_bottom_background"
                    android:drawableTop="@drawable/ic_other"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingStart="-40dp"
                    android:paddingTop="45dp"
                    android:paddingBottom="18dp"
                    android:text="Other" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Textview.Normal.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_white_top_right_background"
                    android:drawableTop="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingStart="-40dp"
                    android:paddingTop="45dp"
                    android:paddingBottom="18dp"
                    android:text="@string/user" />

                <TextView
                    style="@style/Textview.Normal.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_rectangle_white_right_bottom_background"
                    android:drawableTop="@drawable/ic_logout"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingStart="-40dp"
                    android:paddingTop="45dp"
                    android:paddingBottom="18dp"
                    android:text="Logout" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_wallet" />
</androidx.constraintlayout.widget.ConstraintLayout>